--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -131,6 +131,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "capstone-frontend"
+    }
+  },
+  "defaultProject": "capstone-frontend",
+  "cli": {
+    "analytics": "e2d539fd-a00d-4fbd-b8c2-dad6a4109f90"
+  }
 }
